Add jquery and select2 lib.

--- a/app/views/layouts/export_manager/application.html.erb
+++ b/app/views/layouts/export_manager/application.html.erb
@@ -9,7 +9,7 @@
 
   <%= stylesheet_link_tag "export_manager/application", media: "all" %>
 
-  <%= javascript_include_tag "https://code.jquery.com/jquery-3.6.0.min.js" %>
+  <%= javascript_include_tag 'export_manager/application', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
 
