rename excel name

--- a/app/views/export_manager/export_manager/export.html.erb
+++ b/app/views/export_manager/export_manager/export.html.erb
@@ -82,7 +82,7 @@
 
           var excelButton = $('<input>').attr({
             type: 'submit',
-            value: 'Export Excel',
+            value: 'Export EXCEL',
             class: 'export-button'
           }).on('click', function() {
             $('#export-type').val('excel');
